<resources>

    <string name="app_name">Tech Check</string>

    <!-- TITLE -->
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_history">History</string>
    <string name="txt_add_item_to_cart">ADD ITEM TO CART</string>
    <string name="txt_no_shopping_bag">No Shopping Bag</string>
    <string name="txt_total">Total</string>
    <string name="txt_shopping_bag">Shopping Bag Costs</string>
    <string name="txt_no_order_history">No Order History</string>

    <!-- TOOL BAR -->
    <string name="back_button">Back Button</string>
    <string name="shopping_cart">Shopping Cart</string>

    <!-- BUTTONS -->
    <string name="btn_add">Add To Cart</string>
    <string name="btn_proceed">Proceed To Checkout</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_share_via">Share Via…</string>

    <!-- DIALOG -->
    <string name="loading">Loading…</string>
    <string name="txt_permanently_deleted">Are you sure you want to delete this item?\nIt will be permanently deleted.</string>
    <string name="txt_delete_item">DELETE ITEM</string>

    <!-- TOAST -->
    <string name="error_authentication_failed">Authentication failed.</string>
    <string name="txt_item_added">Item added successfully…</string>
    <string name="txt_item_deleted_successfully">Item deleted successfully…</string>

    <!-- PERMISSIONS -->
    <string name="txt_need_permission">Need Permissions</string>
    <string name="txt_need_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="btn_go_to_settings">GOTO SETTINGS</string>
    <string name="txt_more_than">Quantity must not be more than 15…</string>
    <string name="txt_less_than">Quantity must not be less than 1…</string>

</resources>