<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_row_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackground"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|center_horizontal"
            android:maxLines="1"
            android:text="@string/txt_delete_item"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_title"
            android:layout_width="@dimen/margin_0"
            android:layout_height="0.5dp"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@color/colorBorder"
            app:layout_constraintEnd_toEndOf="@+id/text_view_title"
            app:layout_constraintStart_toStartOf="@+id/text_view_title"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

        <TextView
            android:id="@+id/text_view_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txt_permanently_deleted"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_bottom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_message">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10"
                android:background="@drawable/gradient_button_default_no_color"
                android:text="@string/btn_cancel"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_delete"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:background="@drawable/gradient_button_default"
                android:text="@string/btn_delete"
                android:textColor="@color/windowBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>