<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isShoppingCart"
            type="boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_home_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBorder">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:background="@color/windowBackground"
            android:visibility="@{isShoppingCart ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_view_item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_view_size_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/layout_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_item_count" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_layout_bottom"
                android:padding="@dimen/margin_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/text_view_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_vertical|center_horizontal"
                    android:maxLines="1"
                    android:text="@string/txt_shopping_bag"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:background="@color/colorReadText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_item" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line_divider">

                    <TextView
                        android:id="@+id/text_view_total_holder"
                        android:layout_width="@dimen/margin_0"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-condensed"
                        android:maxLines="1"
                        android:text="@string/txt_total"
                        android:textStyle="bold"
                        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_total"
                        app:layout_constraintEnd_toStartOf="@+id/text_view_total"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/text_view_total"
                        android:layout_width="@dimen/margin_0"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="end"
                        android:maxLines="1"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/text_view_total_holder" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_proceed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:background="@drawable/gradient_button_default"
                    android:text="@string/btn_proceed"
                    android:textColor="@color/windowBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_total" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:background="@color/windowBackground"
            android:visibility="@{!isShoppingCart ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/txt_no_shopping_bag"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>